; ModuleID = '/home/carl/AnghaBench/libgit2/tests/status/extr_worktree.c_remove_file_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/status/extr_worktree.c_remove_file_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c".git\00", align 1
@GIT_RMDIR_REMOVE_FILES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @remove_file_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @remove_file_cb(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = call i8* @git_buf_cstr(i32* %7)
  store i8* %8, i8** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @GIT_UNUSED(i8* %9)
  %11 = load i8*, i8** %6, align 8
  %12 = call i64 @git__suffixcmp(i8* %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %30

15:                                               ; preds = %2
  %16 = load i8*, i8** %6, align 8
  %17 = call i64 @git_path_isdir(i8* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %15
  %20 = load i8*, i8** %6, align 8
  %21 = load i32, i32* @GIT_RMDIR_REMOVE_FILES, align 4
  %22 = call i32 @git_futils_rmdir_r(i8* %20, i32* null, i32 %21)
  %23 = call i32 @cl_git_pass(i32 %22)
  br label %29

24:                                               ; preds = %15
  %25 = load i32*, i32** %5, align 8
  %26 = call i8* @git_buf_cstr(i32* %25)
  %27 = call i32 @p_unlink(i8* %26)
  %28 = call i32 @cl_git_pass(i32 %27)
  br label %29

29:                                               ; preds = %24, %19
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %14
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i8* @git_buf_cstr(i32*) #1

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i64 @git__suffixcmp(i8*, i8*) #1

declare dso_local i64 @git_path_isdir(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_futils_rmdir_r(i8*, i32*, i32) #1

declare dso_local i32 @p_unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
